# tap-vnstock

./: .gitignore  .pre-commit-config.yaml  README.md  meltano.yml  pyproject.toml
tap_vnstock/: __init__.py  client.py  streams.py  tap.py
tap_vnstock/schemas/: events.json  financial_reports.json  fundamental.json  indicators.json  instruments.json  quotes.json
tests/: __init__.py  test_core.py
